--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,10 @@
 
 /*//HEADER//*/
-
+header {
+  height: 100px;
+  width: 100%;
+  margin-bottom: 75px;
+}
 header ul {
   margin-right: 37px;
   margin-top: 13px;
@@ -12,7 +16,7 @@ header ul li {
   display: inline;
   font-family: 'Open Sans';
   margin-top: 4%;
-  margin-bottom: 0;
+  margin-bottom: 0px;
   margin-right: 10px;
 }
 header img {
@@ -23,7 +27,9 @@ header img {
   height: 60px;
   margin-bottom: 0;
 }
-
+.clearfix {
+  clear: both;
+}
 /*//BODY//*/
 
 .containerBox {
@@ -58,6 +64,7 @@ button {
   font-size: 20px;
   margin-top: 35px;
 }
+
 
 /*//FOOTER//*/
 
