added animation to home page

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,5 +1,35 @@
 /* MODULE STYLES
 ========================= */
+/*home page animation*/
+#home-content {
+    position: absolute;
+    margin: 0 auto;
+    left: -1000px;
+    width: 100%;
+    height: 100%;
+    animation: slide 0.7s forwards;
+    animation-delay: 0.3s;
+    animation-iteration: 1;
+}
+button {
+  animation: fade;
+  animation-delay: 1.5s;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes slide {
+    100% { left: 0; }
+}
+
+@keyframes fade {
+
+  0% {opacity: 0}
+  100% {opacity: 1}
+}
+
+
 /* main nav */
 #main-nav li a {
   color: black;
