went over index and css with MVC

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,3 +14,10 @@ body {
 a {
   text-decoration: none;
 }
+/* FOOTER */
+footer {
+  width: 100%;
+  height: 75px;
+  clear: both;
+  font-family: 'Open Sans';
+}
