--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,11 +1,38 @@
 /* LAYOUT STYLES
 ========================= */
+/* HEADER */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 60px;
+}
+nav ul {
+  display: flex;
+  flex-direction: row;
+}
 
 main {
   max-width: 960px;
   margin: 0 auto;
 }
-
+nav {
+  display: flex;
+  justify-content: center;
+}
+/* HOME CONTENT */
+.containerBox {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 500px;
+}
+.text-box {
+    position: absolute;
+    height: 100%;
+    text-align: center;
+    width: 100%;
+}
 /* --- About Layout --- */
 
 .spacing-bar {
@@ -45,4 +72,14 @@ main {
 
 .unsub-container {
   padding: 10px;
+}
+/* FOOTER */
+
+footer ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5px;
+  font-family: 'Open Sans';
 }
