--- a/styles/modules.css
+++ b/styles/modules.css
@@ -39,6 +39,7 @@ main h3 {
   font-size: 20px;
   margin-top: 35px;
 }
+/*--------- delete button ----- */
 .delete{
      margin: 7px;
      font-size: 15px;
@@ -140,9 +141,27 @@ h2 {
   box-shadow: 0 0 10px #000;
   cursor: pointer;
 }
-
+/*  ------ profile info --------  */
+#profile{
+ height: 9em;
+ width: 100%;
+}
+#profile > img{
+  display: inline;
+  height: 6em;
+  width: 6em;
+  margin-top: 3.5%;
+  margin-left: 80%;
+  border-radius: 3em;
+}
 /* --- Unsubscribe List -- */
-
+#unsubscribe-page {
+ background-color: #eee;
+ border-radius: 2em;;
+}
+#unsubscribe-page ul > div{
+ border-radius: 1em;
+}
 .letter span {
   font-size: 1.5em;
   font-weight: 700;
