--- a/styles/layout.css
+++ b/styles/layout.css
@@ -44,6 +44,18 @@ nav {
     text-align: center;
     width: 100%;
 }
+/* home Info*/
+#home-info{
+ position: absolute;
+ top: 90%;
+}
+/** SVG **/
+.headerCurve{
+  margin-bottom: -1px;
+  width: 100%;
+  height: 70px;
+}
+
 .containerBox2{
   background-color: #939393;
   text-align: center;
@@ -115,9 +127,11 @@ nav {
 /* FOOTER */
 
 footer ul {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
+  position: fixed;
+  top: 190%;
+  /*list-style-type: none;*/
+  /*display: flex;*/
+  /*flex-direction: row;*/
   justify-content: center;
   margin-top: 5px;
   font-family: 'Open Sans';
