--- a/styles/modules.css
+++ b/styles/modules.css
@@ -142,6 +142,14 @@ h2 {
   left: calc(50% - 1.5em);
   border-radius: 3em;
 }
+#profile-name{
+ list-style: none;
+ position: absolute;
+ top: 19vh;
+ left: calc(38%);
+ font-size: 1em;
+ font-weight: bold;
+}
 /*------------ unique emails no ------------*/
 #number{
   display: inline-block;
@@ -149,7 +157,7 @@ h2 {
   font-weight: bold;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   position: absolute;
-  top: 18.3vh;
+  top: 22.3vh;
   left: calc(50% - 28vw);
 }
 #profile p{
@@ -157,7 +165,7 @@ h2 {
   font-weight: bold;
   text-align: center;
   position: absolute;
-  top: 18vh;
+  top: 22vh;
   left: calc(50% - 16vw);
   align-self: center
 }
@@ -223,10 +231,10 @@ h2 {
   cursor: pointer;
 }
 /* FOOTER */
-footer li {
+/*footer li {
   margin: 25px;
   padding: 0;
-}
+}*/
 
 footer h3 {
   font-family: 'Open Sans';
@@ -241,10 +249,13 @@ footer h3 {
 /*  PROFILE
 ============================*/
 #profile P{
-  left: calc(50% - 11vw);
+  left: calc(40%);
 }
 #profile div{
-  left: calc(50% - 20vw);
+  left: calc(30%);
+}
+#profile-name{
+ left: calc(42%);
 }
 
 }
@@ -288,15 +299,20 @@ footer h3 {
   #profile img{
     height: 5em;
     width: 5em;
-    left: calc(50% - -9.5em);
+    left: calc(75%);
+  }
+  #profile-name{
+   position: absolute;
+   left: calc(74%);
+   top: 24%;
   }
   #profile P {
-      left: calc(50% - 30vw);
-      top: 18vh;
+      left: calc(20%);
+      top: 22%;
   }
   #profile div {
-      top: 14.3vh;
-      left: calc(50% - 20vw);
+   top: 17%;
+   left: calc(30%);
   }
 
 }
@@ -317,21 +333,9 @@ footer h3 {
   /*profile
   ======================*/
   #profile div {
-    top: 15.3vh;
-    left: calc(50% - 34vw);
+   top: 22%;
+   left: calc(42%);
 }
-#profile P {
-    left: calc(50% - 30vw);
-    top: 15vh;
-}
-}
-@media only screen and (min-width: 960px) {
-  #profile p{
-    left: calc(50% - 24vw);
-  }
-  #profile div{
-    left: calc(50% - 28vw);
-  }
 }
 @media only screen and (min-width: 960px) {
   #profile p{
