home lay out workedgit add .

--- a/styles/base.css
+++ b/styles/base.css
@@ -23,7 +23,6 @@ p {
 footer {
   width: 100%;
   padding: 20px;
-  /*clear: both;*/
   font-family: 'Open Sans';
   margin-top: -1px;
   margin-bottom: auto;
@@ -31,4 +30,5 @@ footer {
   color: white;
   max-width: 960px;
   align-self: center;
+  align-items: flex-end; 
 }
