--- a/styles/layout.css
+++ b/styles/layout.css
@@ -36,7 +36,9 @@ nav {
     position: relative;
     display: inline-block;
     width: 100%;
-    height: 500px;
+    height: 90vh;
+    background-color: #939393;
+    margin-top: -1px;
 }
 .text-box {
     position: absolute;
@@ -48,19 +50,23 @@ nav {
 #home-info{
  position: absolute;
  top: 90%;
+ max-width: 960px;
+ width: 100%;
 }
 /** SVG **/
 .headerCurve{
   margin-bottom: -1px;
   width: 100%;
   height: 70px;
+  margin-top: -20px;
 }
 
 .containerBox2{
-  background-color: #939393;
+  background-color: #444;
   text-align: center;
   padding-top: 88px;
   margin-top: -1px;
+  margin-bottom: -10px;
 }
 .containerBox2 h2{
   color: hsla(0,0%,100%,.8);
