hover senderName and sender is been toggle

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -105,7 +105,6 @@ nav {
 }
 
 /* --- Unsubscribe List Layout --- */
-
 .letter {
   display: flex;
   justify-content: center;
@@ -142,3 +141,6 @@ nav {
   margin-top: 5px;
   font-family: 'Open Sans';
 }*/
+#hakkyFix{
+ margin-top: 200vh;
+}
