flip property back part have its linkedin and github icon icon

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -119,14 +119,55 @@ h2 {
   border-radius: 100%;
   transition: 0.2s ease-in-out;
 }
+
 .student:hover h3 {
-  color: #c71610;
-  cursor: pointer;
+ color: #c71610;
+ cursor: pointer;
 }
 
 .student:hover img {
-  box-shadow: 0 0 10px #000;
+ box-shadow: 0 0 10px #000;
+ cursor: pointer;
+}
+
+/* flip image property */
+.f1_container {
+  position: relative;
+  margin: 10px auto;
+  width: 150px;
+  height: 150px;
+  z-index: 1;
+  perspective: 1000;
+}
+.f1_card {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 1.0s linear;
+}
+.f1_container:hover .f1_card {
+  transform: rotateY(180deg);
+  box-shadow: -5px 5px 5px #aaa;
+  border-radius:100px;
+}
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.face.back {
+  display: block;
+  transform: rotateY(180deg);
+  box-sizing: border-box;
+  padding: 10px;
+  text-align: center;
+  border-radius: 100px;
   cursor: pointer;
+  color: white;
+}
+.icons{
+ margin-top: 2em;
 }
 /*  ------ profile info --------  */
 #profile{
