reset home page as before

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -40,7 +40,7 @@ main h3 {
   margin-top: 35px;
 }
 /*home page animation*/
-#slide{
+#home-content{
     position: absolute;
     margin: 0 auto;
     width: 100%;
