--- a/styles/modules.css
+++ b/styles/modules.css
@@ -130,7 +130,7 @@ h2 {
  cursor: pointer;
 }
 
-/* flip image property */
+/*==================== flip image property ====================*/
 .f1_container {
   position: relative;
   margin: 10px auto;
@@ -142,6 +142,7 @@ h2 {
 .f1_card {
   width: 100%;
   height: 100%;
+  border-radius:100px;
   transform-style: preserve-3d;
   transition: all 1.0s linear;
 }
