--- a/styles/layout.css
+++ b/styles/layout.css
@@ -37,7 +37,6 @@ nav {
     display: inline-block;
     width: 100%;
     height: 90vh;
-    background-color: #939393;
     margin-top: -1px;
 }
 .text-box {
@@ -62,14 +61,13 @@ nav {
 }
 
 .containerBox2{
-  background-color: #444;
+  color: #444;
   text-align: center;
   padding-top: 88px;
   margin-top: -1px;
   margin-bottom: -10px;
 }
 .containerBox2 h2{
-  color: hsla(0,0%,100%,.8);
   letter-spacing: 0;
   line-height: 46px;
   margin-bottom: 54px;
