--- a/styles/modules.css
+++ b/styles/modules.css
@@ -272,6 +272,7 @@ h2 {
   transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
+/* FOOTER */
 footer h3 {
   font-family: 'Open Sans';
   font-size: 17px;
