footer problem solved

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -379,6 +379,10 @@ footer h3 {
    top: 22%;
    left: calc(45%);
 }
+/* FOOTER */
+footer{
+ margin-top: 0.8vh;
+}
 }
 @media only screen and (min-width: 960px) {
   #profile p{
@@ -389,6 +393,10 @@ footer h3 {
     }
    #profile > img, #profile-name{
      left: calc(50% + 238px);
+   }
+   /* FOOTER */
+   footer{
+    margin-top: 1.1vh;
    }
 }
 @media only screen and (min-width: 640px) {
