--- a/styles/layout.css
+++ b/styles/layout.css
@@ -36,8 +36,7 @@ nav {
     position: relative;
     display: inline-block;
     width: 100%;
-    height: 90vh;
-    margin-top: -1px;
+    height: 100%;
 }
 .text-box {
     position: absolute;
