--- a/styles/modules.css
+++ b/styles/modules.css
@@ -40,7 +40,7 @@ main h3 {
   margin-top: 35px;
 }
 /*home page animation*/
-#slide{
+#home-content{
     position: absolute;
     margin: 0 auto;
     width: 100%;
@@ -305,7 +305,22 @@ footer h3 {
 
 
 @media screen and (min-width: 640px) {
-
+ /* HEADER LOGO */
+ #fullLogo {
+   display: block;
+ }
+ #mobileLogo {
+   display: none;
+ }
+ .full-nav {
+   display: block;
+ }
+ .text-box h1 {
+   font-size: 35px;
+ }
+ .text-box h3 {
+   font-size: 15px;
+ }
   /* LAYOUT STYLES
   ========================= */
 
@@ -399,21 +414,19 @@ footer{
     margin-top: 1.1vh;
    }
 }
-@media only screen and (min-width: 640px) {
-  /* HEADER LOGO */
-  #fullLogo {
-    display: block;
-  }
-  #mobileLogo {
-    display: none;
-  }
-  .full-nav {
-    display: block;
-  }
-  .text-box h1 {
-    font-size: 35px;
-  }
-  .text-box h3 {
-    font-size: 15px;
-  }
+@media only screen and (min-height: 450px) and (max-height: 750px){
+  /*+++++++ Profile ++++++++++++++*/
+  #profile p{
+    top: 30vh;
+    }
+    #profile div{
+      top: 30vh;
+    }
+   #profile > img{
+     top: 16vh;
+   }
+   #profile-name{
+    top: 25vh;
+   }
+
 }
