--- a/styles/modules.css
+++ b/styles/modules.css
@@ -214,7 +214,8 @@ h2 {
 /* -------- Unsubscribe List -- */
 #unsubscribe-page {
  background-color: #eee;
- border-radius: 2em;;
+ border-radius: 2em;
+ padding-bottom: 20px;
 }
 #unsubscribe-page ul > div{
  border-radius: 1em;
