--- a/styles/base.css
+++ b/styles/base.css
@@ -29,7 +29,7 @@ footer {
   background-color: black;
   color: white;
   max-width: 960px;
-  text-align: center;
   display: block;
   margin-left: calc(50% - 480px);
+  align-self: baseline;
 }
