--- a/styles/layout.css
+++ b/styles/layout.css
@@ -46,39 +46,40 @@ nav {
 }
 /* home Info*/
 #home-info{
+ margin-top: 80vh;
  max-width: 960px;
  width: 100%;
 }
-/** SVG **/
-.headerCurve{
-  margin-bottom: -1px;
+.row{
+ height: 60vh;
+ position: relative;
+ }
+ .right, .left{
   width: 100%;
-  height: 70px;
-  margin-top: -20px;
-}
-
-.containerBox2{
-  color: #444;
+  padding: 20px;
   text-align: center;
-  padding-top: 88px;
-  margin-top: -1px;
-  margin-bottom: -10px;
+ }
+ .right > img, .left > img{
+  height: 25vh;
+  width: 75vw;
+ }
+.right > p, .left > p{
+ padding: 2vw;
 }
-.containerBox2 h2{
-  letter-spacing: 0;
-  line-height: 46px;
-  margin-bottom: 54px;
+.right > h3, .left > h3{
+ padding-bottom: 10px;
 }
-.containerBox2 img{
-  width: 64%;
-  max-width: 800px;
+.right{
+ float: top;
 }
-#curve{
-  width: 100%;
-  height: 70px;
-  position: absolute;
-  bottom: 0;
-  background-color: #939393;
+.left{
+ float: bottom;
+}
+.contact{
+ height:20vh;
+ width:100%;
+ padding: 20px;
+ margin-top: 20%;
 }
 /* --- About Layout --- */
 
@@ -125,3 +126,30 @@ nav {
   padding: 10px;
 }
 /* FOOTER */
+@media only screen and (min-width: 640px){
+ .row {
+  height: 30vh;
+ }
+.right, .left{
+ width: 50%;
+ height: 40vh;
+}
+ .right > p, .left > p{
+  padding: 0vw;
+  text-align: left;
+ }
+ .right > h3, .left > h3{
+  text-align: left;
+ }
+ .right > img, .left > img {
+  height: 60%;
+  width: 80%;
+}
+ .right{
+  float: right;
+ }
+ .left{
+  float: left;
+ }
+
+}
