--- a/styles/modules.css
+++ b/styles/modules.css
@@ -351,7 +351,10 @@ h2 {
   #profile img{
     height: 5em;
     width: 5em;
-    left: calc(75%);
+    /*left: calc(75%);*/
+    position: static;
+    margin-left: 75%;
+    margin-top: 4%;
   }
   #profile-name{
    position: absolute;
