--- a/styles/modules.css
+++ b/styles/modules.css
@@ -70,6 +70,9 @@ main h3 {
 
 
 /* main nav */
+nav{
+  display: block;
+}
 #main-nav li a {
   color: black;
 }
@@ -175,42 +178,29 @@ h2 {
  height: 9em;
  width: 100%;
 }
-#profile > img{
-  display: inline;
+#profile span{
+  display: block;
+}
+#profile img{
   height: 3em;
   width: 3em;
-  position: absolute;
-  top: 13vh;
-  left: calc(50% - 1.5em);
-  border-radius: 3em;
+  margin-left: calc(50% - 1.5em);
+  margin-top: 4%;
+  margin-bottom: 1%;
+  border-radius: 5px;
 }
-#profile-name{
- list-style: none;
- position: absolute;
- top: 19vh;
- left: calc(38%);
- font-size: 1em;
- font-weight: bold;
+#profile span:first-child li{
+    display: none;
 }
-/*------------ unique emails no ------------*/
-#number{
-  display: inline-block;
-  font-size: 30px;
-  font-weight: bold;
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  position: absolute;
-  top: 22.3vh;
-  left: calc(50% - 28vw);
-}
-#profile p{
-  font-size: 1.5em;
-  font-weight: bold;
+#profile span:nth-child(2){
   text-align: center;
-  position: absolute;
-  top: 22vh;
-  left: calc(50% - 16vw);
-  align-self: center
+  font-size: 1em;
 }
+#profile span:nth-child(2) span{
+  display: inline;
+  margin: 1%;
+}
+
 /* -------- Unsubscribe List -- */
 #unsubscribe-page {
  background-color: #eee;
@@ -277,27 +267,11 @@ h2 {
 ========================= */
 @media screen  and (max-width: 500px){
  nav li:last-child {
-   position: absolute;
-   right: 30px;
+   /*position: absolute;*/
+   /*right: 30px;*/
+   text-align:right;
 }
 }
-@media screen and (min-width: 440px) {
-
-/*  PROFILE
-============================*/
-#profile P{
-  left: calc(40%);
-}
-#profile div{
-  left: calc(30%);
-}
-#profile-name{
- left: calc(42%);
-}
-
-}
-
-
 @media screen and (min-width: 640px) {
  /* HEADER LOGO */
  #fullLogo {
@@ -348,30 +322,6 @@ h2 {
   /*  profile
   ========================================*/
 
-  #profile img{
-    height: 5em;
-    width: 5em;
-    /*left: calc(75%);*/
-    position: static;
-    margin-left: 75%;
-    margin-top: 4%;
-  }
-  #profile-name{
-   position: absolute;
-   left: calc(74%);
-   top: 24%;
-  }
-  #profile P {
-      left: calc(20%);
-      top: 22%;
-  }
-  #profile div {
-   top: 17%;
-   left: calc(30%);
-  }
-
-}
-
 @media screen and (min-width: 760px) {
 
   /* LAYOUT STYLES
@@ -387,35 +337,4 @@ h2 {
 
   /*profile
   ======================*/
-  #profile div {
-   top: 22%;
-   left: calc(45%);
-}
-}
-@media only screen and (min-width: 960px) {
-  #profile p{
-    left: calc(40%);
-    }
-    #profile div{
-      left: calc(35%);
-    }
-   #profile > img, #profile-name{
-     left: calc(50% + 238px);
-   }
-}
-@media only screen and (min-height: 450px) and (max-height: 750px){
-  /*+++++++ Profile ++++++++++++++*/
-  #profile p{
-    top: 30vh;
-    }
-    #profile div{
-      top: 30vh;
-    }
-   #profile > img{
-     top: 16vh;
-   }
-   #profile-name{
-    top: 25vh;
-   }
-
 }
